# nano-graphrag

./: .gitignore  issues_raw.json  pyproject.toml  readme.md
docs/: Project-Setup.md  faq.md
docs/Docinsight/: DocInsight-Unified-System-Architecture.md  Document Processing Pipeline.md  SE.md  docinsight-final-pitch.md  docinsight-user-stories.md  docling-usage.md  implementation-plan.md  index.md  issue-coverage-analysis.md  migration-plan.md  nanograph-rag-usage.md  query-processing.md  research-documentation-framework.md  sqlite.md  system-design-foundations-and-evolution.md  technical-implementation.md  techstack.md
examples/: using_custom_chunking_method.py
nano_graphrag/: _llm.py  _op.py  _splitter.py  _utils.py  base.py  chunking.py  entity_relationship_extraction.py  graphrag.py  knowledge_graph_ops.py  summarization.py
nano_graphrag/_storage/: __init__.py  gdb_neo4j.py  gdb_networkx.py  vdb_hnswlib.py
nano_graphrag/entity_extraction/: extract.py  metric.py  module.py
tests/: test_hnsw_vector_storage.py  test_neo4j_storage.py  test_splitter.py
tests/entity_extraction/: test_extract.py
tools/: analyze_code.sh
